force-app/main/default/objects/Survey_Contact__c/Survey_Contact__c.object-meta.xml
<CustomObject>
    <label>Survey Contact</label>
    <nameField>
        <label>Survey Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>