force-app/main/default/objects/Survey_Contact__c/fields/Customer_Information__c.field-meta.xml
<CustomField>
    <fullName>Customer_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Information</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Surveys Contacts</relationshipLabel>
    <relationshipName>Surveys_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>