force-app/main/default/objects/Survey_Contact__c/fields/Loan_Information__c.field-meta.xml
<CustomField>
    <fullName>Loan_Information__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Information</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Surveys Contacts</relationshipLabel>
    <relationshipName>Surveys_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>