force-app/main/default/objects/Survey_Contact__c/fields/Management_in_Charge__c.field-meta.xml
<CustomField>
    <fullName>Management_in_Charge__c</fullName>
    <formula>Customer_Information__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Management in Charge</label>
    <type>Text</type>
</CustomField>