force-app/main/default/objects/Survey_Contact__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <formula>TEXT(Customer_Information__r.Relation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation</label>
    <type>Text</type>
</CustomField>