force-app/main/default/objects/Survey_Contact__c/fields/Share__c.field-meta.xml
<CustomField>
    <fullName>Share__c</fullName>
    <formula>TEXT(Customer_Information__r.Share__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Share (%)</label>
    <type>Text</type>
</CustomField>